--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,30 @@
 
 <%= form_for @user do |f| %>
+  <% if @user.errors.any? %>
+    <div class="alert alert-danger">
+      <h4>入力内容に誤りがあります。</h4>
+      <ul class="list-unstyled">
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <div class="field">
-    <%= f.label :oganization %><br />
+    <%= f.label :所属 %><br />
     <%= f.text_field :oganization%>
   </div>
   <div class="field">
-    <%= f.label :title %><br />
+    <%= f.label :役職 %><br />
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :introduction %><br />
+    <%= f.label :自己紹介 %><br />
     <%= f.text_area :introduction %>
   </div>
   <div class="field">
-    <%= f.label :country %><br />
+    <%= f.label :居住国 %><br />
     <%= f.text_field :country %>
   </div>
 
