--- a/app/views/book/add.html.erb
+++ b/app/views/book/add.html.erb
@@ -1,2 +1,20 @@
-<h1>Book#add</h1>
-<p>Find me in app/views/book/add.html.erb</p>
+<h1>新規bookの登録</h1>
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
+<%= form_for(@article) do |f| %>
+  <div class="field">
+    <%= f.label :記事URL %><br />
+    <%= f.text_field :url %>
+  </div>
+  <div class="field">
+    <%= f.label :地域 %><br />
+  <%= f.collection_radio_buttons(:area_id,Area.all,:id,:description) %>
+  </div>
+  <div class="field">
+  <%= f.label :カテゴリ %><br />
+  <%= f.collection_radio_buttons(:category_id,Category.all,:id,:description) %>
+
+  </div>
+  <%= f.submit "Update" %>
+<% end %>
