記事の取得・コメント追加更新処理追加

--- a/app/views/book/add.html.erb
+++ b/app/views/book/add.html.erb
@@ -16,5 +16,5 @@
   <%= f.collection_radio_buttons(:category_id,Category.all,:id,:description) %>
 
   </div>
-  <%= f.submit "Update" %>
+  <%= f.submit "Book" %>
 <% end %>
