--- a/app/views/book/comment.html.erb
+++ b/app/views/book/comment.html.erb
@@ -2,11 +2,11 @@
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
-<p>タイトル: <%= @article.title %></p>
-<p>WebSite: <%= link_to @article.name, @article.url, {:target => "_blank"} %></p>
-<p>日付: <%= @article.date %></p>
-<p>記事本文: <%= @article.description %></p>
-<p>カテゴリー: <%= @article.category.description %></p>
-<p>エリア: <%= @article.area.description %></p>
+<p><%= t 'articles.title' %>: <%= @article.title %></p>
+<p><%= t 'articles.name' %>: <%= link_to @article.name, @article.url, {:target => "_blank"} %></p>
+<p><%= t 'articles.date' %>: <%= @article.date %></p>
+<p><%= t 'articles.description' %>: <%= @article.description %></p>
+<p><%= t 'articles.category' %>: <%= @article.category.description %></p>
+<p><%= t 'articles.area' %>: <%= @article.area.description %></p>
 
 <%= render 'form_comment', book: @book %>
