--- a/app/views/book/_form_comment.html.erb
+++ b/app/views/book/_form_comment.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@book, url: book_comment_url(@book.article_id)) do |f| %>
   <div class="field">
-    <%= f.label :コメント %><br />
+    <%= f.label t('books.comment') %><br />
     <%= f.text_area :comment %>
   </div>
   <%= f.submit "Book" %>
