記事一覧実装

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,6 +28,9 @@
             <%= link_to '記事登録', book_add_path %>
           </li>
           <li class="nav-item">
+            <%= link_to '記事一覧', book_index_path %>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">記事検索</a>
           </li>
           <li class="nav-item">
@@ -40,6 +43,9 @@
           </li>
           <li class="nav-item">
             <%= link_to '新規登録 ', new_user_registration_path %>
+          </li>
+          <li class="nav-item">
+            <%= link_to '記事一覧', book_index_path %>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">記事検索</a>
