--- a/app/views/book/comment.html.erb
+++ b/app/views/book/comment.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, @article.title) %>
+<h2><%= page_title %></h2>
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
