books複数形対応

--- a/app/views/books/_form_comment.html.erb
+++ b/app/views/books/_form_comment.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@book, url: book_comment_url(@book.article_id)) do |f| %>
+<%= form_for(@book, url: books_comment_url(@book.article_id)) do |f| %>
   <div class="field">
     <%= f.label t('books.comment') %><br />
     <%= f.text_area :comment %>
