--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,19 +2,21 @@
 <ul>
 
 <% if !@books.nil? %>
-<%  @books.each do |book| %>
- <li>
-<%= book.article.title %>
-<% if !book.article.ogpimg.nil? %>
-  <%= image_tag(book.article.ogpimg) %>
-<% else %>
-<% end %>
-<br/>
-<%= book.article.name %>
-<%= book.article.date %><br/>
-<%= book.article.category.description %>
-<%= book.article.area.description %>
-<% end %>
+  <%  @books.each do |book| %>
+  <li>
+    <%= link_to(books_comment_path(book.article_id)) do %>
+      <%= book.article.title %>
+      <% if !book.article.ogpimg.nil? %>
+        <%= image_tag(book.article.ogpimg) %>
+      <% else %>
+      <% end %>
+      <br/>
+      <%= book.article.name %>
+      <%= book.article.date %><br/>
+      <%= book.article.category.description %>
+      <%= book.article.area.description %>
+    <% end %>
+  <% end %>
 <% end %>
 </li>
 </ul>
