--- a/app/views/books/_form_comment.html.erb
+++ b/app/views/books/_form_comment.html.erb
@@ -3,5 +3,5 @@
     <%= f.label t('books.comment') %><br />
     <%= f.text_area :comment %>
   </div>
-  <%= f.submit "Book" %>
+  <%= f.submit t('books.bookbtn') %>
 <% end %>
