--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,24 @@
 <h2><%= page_title %></h2>
-<ul>
-
-<% if !@books.nil? %>
-  <%  @books.each do |book| %>
+<% if !@articles.nil? %>
+  <ul>
+  <%  @articles.each do |article| %>
   <li>
-    <%= link_to(books_comment_path(book.article_id)) do %>
-      <%= book.article.title %>
-      <% if !book.article.ogpimg.nil? %>
-        <%= image_tag(book.article.ogpimg) %>
+    <%= link_to(books_show_path(article.id)) do %>
+      <%= article.title %>
+      <% if !article.ogpimg.nil? %>
+        <%= image_tag(article.ogpimg) %>
       <% else %>
       <% end %>
       <br/>
-      <%= book.article.name %>
-      <%= book.article.date %><br/>
-      <%= book.article.category.description %>
-      <%= book.article.area.description %>
+      <%= article.name %>
+      <%= article.date %><br/>
+      <%= article.category.description %>
+      <%= article.area.description %>
     <% end %>
-  <% end %>
+    <%= link_to t('books.bookbtn'), books_comment_path(article.id), class: 'btn btn-default' %>
+    </li>
+    <% end %>
+    </ul>
+    <%= paginate @articles %>
 <% end %>
-</li>
-</ul>
+
