--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Book#show</h1>
-<p>Find me in app/views/book/show.html.erb</p>
+<h2><%= page_title %></h2>
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
+<p><%= t 'articles.title' %>: <%= @article.title %></p>
+<p><%= t 'articles.name' %>: <%= link_to @article.name, @article.url, {:target => "_blank"} %></p>
+<p><%= t 'articles.date' %>: <%= @article.date %></p>
+<p><%= t 'articles.description' %>: <%= @article.description %></p>
+<p><%= t 'articles.category' %>: <%= @article.category.description %></p>
+<p><%= t 'articles.area' %>: <%= @article.area.description %></p>
+<%= link_to t('books.bookbtn'), books_comment_path(@article.id), class: 'btn btn-default' %>
+<% if !@articlebooks.nil? %>
+<ul>
+  <%  @articlebooks.each do |articlebook| %>
+    <li>
+    <%= image_tag articlebook.user.image%>
+    <p><%= articlebook.user.username %></p>
+    <p><%= articlebook.user.oganization %></p>
+    <p><%= articlebook.user.title %></p>
+    <p><%= simple_format(articlebook.comment) %></p>
+    </li>
+  <% end %>
+</ul>
+<% end %>
