--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,26 @@
 <p><%= t 'users.title' %>: <%= @user.title %></p>
 <p><%= t 'users.introduction' %>: <%= @user.introduction %></p>
 <p><%= t 'users.country' %>: <%= @user.country %></p>
+<% if !@books.nil? %>
+  <ul>
+  <%  @books.each do |book| %>
+  <li>
+    <%= link_to(books_show_path(book.article_id)) do %>
+      <%= book.article.title %>
+      <% if !book.article.ogpimg.nil? %>
+        <%= image_tag(book.article.ogpimg) %>
+      <% else %>
+      <% end %>
+      <br/>
+      <%= book.article.name %>
+      <%= book.article.date %><br/>
+      <%= book.article.category.description %>
+      <%= book.article.area.description %>
+    <% end %>
+    <%= link_to t('books.bookbtn'), books_comment_path(book.article_id), class: 'btn btn-default' %>
+    </li>
+  <% end %>
+  </ul>
+  <%= paginate @books %>
+<% end %>
+
