--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,8 +13,10 @@
 <ul>
   <%  @articlebooks.each do |articlebook| %>
     <li>
-    <%= image_tag articlebook.user.image%>
-    <p><%= articlebook.user.username %></p>
+    <%= link_to(user_path(articlebook.user.id)) do %>
+      <%= image_tag articlebook.user.image%>
+      <p><%= articlebook.user.username %></p>
+    <% end %>
     <p><%= articlebook.user.oganization %></p>
     <p><%= articlebook.user.title %></p>
     <p><%= simple_format(articlebook.comment) %></p>
