未ログイン時のログイン画面への遷移設定

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
       <%= article.category.description %>
       <%= article.area.description %>
     <% end %>
-    <%= link_to t('books.bookbtn'), books_comment_path(article.id), class: 'btn btn-default' %>
+    <% if current_user %><%= link_to t('books.bookbtn'), books_comment_path(article.id), class: 'btn btn-default' %><% end %>
     </li>
     <% end %>
     </ul>
