--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
 <p><%= t 'articles.description' %>: <%= @article.description %></p>
 <p><%= t 'articles.category' %>: <%= @article.category.description %></p>
 <p><%= t 'articles.area' %>: <%= @article.area.description %></p>
-<%= link_to t('books.bookbtn'), books_comment_path(@article.id), class: 'btn btn-default' %>
+<% if current_user %><%= link_to t('books.bookbtn'), books_comment_path(@article.id), class: 'btn btn-default' %><% end %>
 <% if !@articlebooks.nil? %>
 <ul>
   <%  @articlebooks.each do |articlebook| %>
