--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,21 +1,21 @@
 <% if user_signed_in? %>
   <% if book.like?(current_user) %>
     <%= button_to like_path(book.like.find_by(user_id: current_user.id)), method: :delete, remote: true do %>
-      <%= content_tag :span, t('articles.like'), class: "glyphicon glyphicon-heart" %>
+      <%= content_tag :span, "", class: "fa fa-heart like-btn-unlike" %>
       <span>
       <%= book.likes_count %>
       </span>
     <% end %>
   <% else %>
     <%= button_to likes_path(book_id: book.id), remote: true do %>
-      <%= content_tag :span, t('articles.like'), class: "glyphicon glyphicon-heart-empty" %>
+      <%= content_tag :span, "", class: "far fa-heart like-btn-like" %>
       <span>
       <%= book.likes_count %>
       </span>
     <% end %>
   <% end %>
 <% else %>
-  <%= content_tag :span, t('articles.like'), class: "glyphicon glyphicon-heart" %>
+  <%= content_tag :span, "", class: "fa fa-heart like-btn-unlike" %>
   <span>
   <%= book.likes_count %>
   </span>
