--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,25 +33,27 @@
   </div>
   <% if @user.provider == 'facebook' || @user.has_social_profile?('facebook') %>
   <div class="field">
-    <%= f.label t('users.auto_post_facebook') %><br />
+    <%= f.label t('users.linked_facebook') %><br />
     <% if @user.provider == 'facebook' %>
       <%= f.text_field :uid, readonly: true, disabled: true %><br/>
     <%else %>
       <%= f.text_field :uid, value:@user.get_social_profile_uid('facebook'), readonly: true, disabled: true %><br/>
     <% end %>
-     <%= f.check_box :auto_post_facebook %>
+    <%#= f.check_box :auto_post_facebook %>
+    <%#= f.label :auto_post_twitter, t('users.auto_post_facebook') %>
 
   </div>
   <% end %>
   <% if @user.provider == 'twitter' || @user.has_social_profile?('twitter') %>
   <div class="field">
-    <%= f.label  t('users.auto_post_twitter') %><br />
+    <%= f.label  t('users.linked_twitter') %><br />
     <% if @user.provider == 'twitter' %>
       <%= f.text_field :uid, readonly: true, disabled: true %><br/>
     <%else %>
       <%= f.text_field :uid, value:@user.get_social_profile_uid('twitter'), readonly: true, disabled: true %><br/>
     <% end %>
     <%= f.check_box :auto_post_twitter %>
+    <%= f.label :auto_post_twitter, t('users.auto_post_twitter') %>
     </div>
   <% end %>
 
