--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
   <p><%= flash[:notice] %></p>
 <% end %>
 <p><%= t 'articles.title' %>: <%= @article.title %></p>
-<p><%= t 'articles.name' %>: <%= link_to @article.name, @article.url, {:target => "_blank"} %></p>
+<p><%= link_to @article.name, @article.url, {:target => "_blank"} %></p>
 <p><%= t 'articles.date' %>: <%= @article.date %></p>
 <p><%= t 'articles.description' %>: <%= @article.description %></p>
 <p><%= t 'articles.category' %>: <%= @article.category.description %></p>
