--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
       <%= article.category.description %>
       <%= article.area.description %>
     <% end %>
-    <% if current_user %><%= link_to t('books.bookbtn'), books_comment_path(article.id), class: 'btn btn-default' %><% end %>
+    <% if current_user %><%= link_to t('books.bookbtn'), books_comment_path(article.id), class: 'btn btn-info' %><% end %>
     </li>
     <% end %>
     </ul>
