og:site_nameの特定文字除去

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
       <% else %>
       <% end %>
       <br/>
-      <%= article.name %>
+      <%= site_name(article.name) %>
       <%= article.date %><br/>
       <%= article.category.description %>
       <%= article.area.description %>
