--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
       <% else %>
       <% end %>
       <br/>
-      <%= book.article.name %>
+      <%= site_name(book.article.name) %>
       <%= book.article.date %><br/>
       <%= book.article.category.description %>
       <%= book.article.area.description %>
